# OccTutorial

./: .gitignore  CMakeLists.txt  README.md
Chapter1_Basics/inc/: BSplineBasisComputations.hpp  LeastSquaresFitting.hpp
Chapter1_Basics/runners/: chapter1_6.cpp
Chapter1_Basics/src/: BSplineBasisComputations.cpp  LeastSquaresFitting.cpp
Chapter2_Geom/inc/: GeometryWriter.hpp
Chapter2_Geom/src/: GeometryWriter.cpp
OtherExamples/: CMakeLists.txt
OtherExamples/inc/: StlPointsExtractor.hpp
OtherExamples/runners/: convertStepToStl.cpp  extractStlPoints.cpp
OtherExamples/src/: StlPointsExtractor.cpp
