CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(occtutorials)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set (CMAKE_CXX_STANDARD 11)
INCLUDE(cmake/CreateExecutable.cmake)
INCLUDE(cmake/CreateLibrary.cmake)

#Find opencascade libraries
#FIND_PACKAGE(OpenCASCADE 7.5.0 EXACT REQUIRED PATHS "../../occt750/install")
FIND_PACKAGE(OpenCASCADE 7.5.0 EXACT REQUIRED)
INCLUDE_DIRECTORIES(${OpenCASCADE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ENABLE_TESTING()

ADD_SUBDIRECTORY(Chapter0_Test)
ADD_SUBDIRECTORY(Chapter1_Basics)
ADD_SUBDIRECTORY(Chapter2_Geom)
ADD_SUBDIRECTORY(OtherExamples)
